# multimodal-bias

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  runner.sh
.github/workflows/: python-app.yml
src/: generate_pairs.py  generate_prediction_race.py  hello_world.py
src/caption/: __init__.py  attributes.py  base_modifier.py  generator.py  mapper.py  model_modifier.py  rule_modifier.py
src/config/: .env  logging_config_debug.json  logging_config_prod.json
src/dataset/: load_dataset.py
src/finetune/: predict.py  test_text_to_image.py  train.py  train_text_to_image.py
src/logger/: formatter.py  logger.py  utils.py
src/prediction/: predict_race.py
test/caption/: test_generator.py  test_mapper.py  test_model_modifier.py  test_rule_modifier.py
